// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shoppinglists actions Returns 404 if page specified is not found  1`] = `
Array [
  Object {
    "type": "GETTING_SHOPPINGLISTS_STARTED",
  },
  Object {
    "error": "Request failed with status code 404",
    "type": "ERROR_ENCOUNTERED",
  },
]
`;

exports[`shoppinglists actions Returns all Shoppinglists when all parameter in getShoppingLists is set to true 1`] = `
Array [
  Object {
    "type": "GETTING_SHOPPINGLISTS_STARTED",
  },
  Object {
    "response": Array [
      Object {
        "description": "Beasts exists",
        "id": "166",
        "items": Array [
          Object {
            "id": "32",
            "name": "Monster",
            "price": "200.0",
            "quantity": "2.5",
          },
          Object {
            "id": "39",
            "name": "Jerry Smith",
            "price": "2.0",
            "quantity": "1.0",
          },
        ],
        "name": "Real Beast",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "I am an Evil Morty",
        "id": "78",
        "items": Array [
          Object {
            "id": "21",
            "name": "Jerry Smiths",
            "price": "200.0",
            "quantity": "1.0",
          },
          Object {
            "id": "24",
            "name": "Waga",
            "price": "5.0",
            "quantity": "-4.0",
          },
          Object {
            "id": "19",
            "name": "Sima",
            "price": "20.0",
            "quantity": "4.0",
          },
          Object {
            "id": "25",
            "name": "trison",
            "price": "5.0",
            "quantity": "6.0",
          },
          Object {
            "id": "20",
            "name": "Hahah",
            "price": "2.0",
            "quantity": "3.0",
          },
          Object {
            "id": "18",
            "name": "Uji",
            "price": "25.0",
            "quantity": "5.0",
          },
          Object {
            "id": "22",
            "name": "ugali",
            "price": "2.0",
            "quantity": "3.0",
          },
        ],
        "name": "Evil Morty",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "1000 years of me and mortty",
        "id": "79",
        "items": Array [
          Object {
            "id": "16",
            "name": "Jerry",
            "price": "100.0",
            "quantity": "1.0",
          },
          Object {
            "id": "17",
            "name": "Vans",
            "price": "2500.0",
            "quantity": "1.0",
          },
          Object {
            "id": "29",
            "name": "Beth",
            "price": "2.0",
            "quantity": "3.0",
          },
        ],
        "name": "Rick Sanchez",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "Things to buy when am hedding back to school",
        "id": "168",
        "items": Array [
          Object {
            "id": "56",
            "name": "Transmara",
            "price": "4.0",
            "quantity": "5.0",
          },
          Object {
            "id": "52",
            "name": "Book",
            "price": "10.0",
            "quantity": "2.0",
          },
          Object {
            "id": "49",
            "name": "Biros",
            "price": "20.0",
            "quantity": "5.0",
          },
        ],
        "name": "Back to school",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "",
        "id": "281",
        "items": Array [
          Object {
            "id": "62",
            "name": "umamas",
            "price": "8.0",
            "quantity": "9.0",
          },
          Object {
            "id": "73",
            "name": "Unga",
            "price": "50.5",
            "quantity": "100.5",
          },
          Object {
            "id": "74",
            "name": "sa",
            "price": "32.0",
            "quantity": "323.0",
          },
          Object {
            "id": "76",
            "name": "sdas",
            "price": "32.0",
            "quantity": "322.0",
          },
        ],
        "name": "ujinga",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "dsds",
        "id": "229",
        "items": Array [],
        "name": "Really Hard",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "",
        "id": "253",
        "items": Array [
          Object {
            "id": "59",
            "name": "Steer wheel",
            "price": "400.0",
            "quantity": "2.0",
          },
        ],
        "name": "BMW",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "Buy Tiny rick artirel",
        "id": "336",
        "items": Array [],
        "name": "Tiny Rick",
        "shared": "True",
        "shared_by": "kimani@andela.com",
      },
      Object {
        "description": "Djikista",
        "id": "330",
        "items": Array [
          Object {
            "id": "77",
            "name": "Sababa",
            "price": "9.0",
            "quantity": "6.0",
          },
        ],
        "name": "New",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "Sir God forbid Ufala",
        "id": "233",
        "items": Array [],
        "name": "God forbid",
        "shared": "False",
        "shared_by": "nobody",
      },
    ],
    "type": "SHOPPINGLISTS_LOADED_SUCCESSFULLY",
  },
  Object {
    "response": Array [
      Object {
        "description": "Beasts exists",
        "id": "166",
        "items": Array [
          Object {
            "id": "32",
            "name": "Monster",
            "price": "200.0",
            "quantity": "2.5",
          },
          Object {
            "id": "39",
            "name": "Jerry Smith",
            "price": "2.0",
            "quantity": "1.0",
          },
        ],
        "name": "Real Beast",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "I am an Evil Morty",
        "id": "78",
        "items": Array [
          Object {
            "id": "21",
            "name": "Jerry Smiths",
            "price": "200.0",
            "quantity": "1.0",
          },
          Object {
            "id": "24",
            "name": "Waga",
            "price": "5.0",
            "quantity": "-4.0",
          },
          Object {
            "id": "19",
            "name": "Sima",
            "price": "20.0",
            "quantity": "4.0",
          },
          Object {
            "id": "25",
            "name": "trison",
            "price": "5.0",
            "quantity": "6.0",
          },
          Object {
            "id": "20",
            "name": "Hahah",
            "price": "2.0",
            "quantity": "3.0",
          },
          Object {
            "id": "18",
            "name": "Uji",
            "price": "25.0",
            "quantity": "5.0",
          },
          Object {
            "id": "22",
            "name": "ugali",
            "price": "2.0",
            "quantity": "3.0",
          },
        ],
        "name": "Evil Morty",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "1000 years of me and mortty",
        "id": "79",
        "items": Array [
          Object {
            "id": "16",
            "name": "Jerry",
            "price": "100.0",
            "quantity": "1.0",
          },
          Object {
            "id": "17",
            "name": "Vans",
            "price": "2500.0",
            "quantity": "1.0",
          },
          Object {
            "id": "29",
            "name": "Beth",
            "price": "2.0",
            "quantity": "3.0",
          },
        ],
        "name": "Rick Sanchez",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "Things to buy when am hedding back to school",
        "id": "168",
        "items": Array [
          Object {
            "id": "56",
            "name": "Transmara",
            "price": "4.0",
            "quantity": "5.0",
          },
          Object {
            "id": "52",
            "name": "Book",
            "price": "10.0",
            "quantity": "2.0",
          },
          Object {
            "id": "49",
            "name": "Biros",
            "price": "20.0",
            "quantity": "5.0",
          },
        ],
        "name": "Back to school",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "",
        "id": "281",
        "items": Array [
          Object {
            "id": "62",
            "name": "umamas",
            "price": "8.0",
            "quantity": "9.0",
          },
          Object {
            "id": "73",
            "name": "Unga",
            "price": "50.5",
            "quantity": "100.5",
          },
          Object {
            "id": "74",
            "name": "sa",
            "price": "32.0",
            "quantity": "323.0",
          },
          Object {
            "id": "76",
            "name": "sdas",
            "price": "32.0",
            "quantity": "322.0",
          },
        ],
        "name": "ujinga",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "dsds",
        "id": "229",
        "items": Array [],
        "name": "Really Hard",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "",
        "id": "253",
        "items": Array [
          Object {
            "id": "59",
            "name": "Steer wheel",
            "price": "400.0",
            "quantity": "2.0",
          },
        ],
        "name": "BMW",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "Buy Tiny rick artirel",
        "id": "336",
        "items": Array [],
        "name": "Tiny Rick",
        "shared": "True",
        "shared_by": "kimani@andela.com",
      },
      Object {
        "description": "Djikista",
        "id": "330",
        "items": Array [
          Object {
            "id": "77",
            "name": "Sababa",
            "price": "9.0",
            "quantity": "6.0",
          },
        ],
        "name": "New",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "Sir God forbid Ufala",
        "id": "233",
        "items": Array [],
        "name": "God forbid",
        "shared": "False",
        "shared_by": "nobody",
      },
    ],
    "type": "ALL_SHOPPINGLISTS_LOADED",
  },
]
`;

exports[`shoppinglists actions Returns only specified number in limit of Shoppinglists when all parameter in getShoppingLists is set to false 1`] = `
Array [
  Object {
    "type": "GETTING_SHOPPINGLISTS_STARTED",
  },
  Object {
    "response": Array [
      Object {
        "description": "Beasts exists",
        "id": "166",
        "items": Array [
          Object {
            "id": "32",
            "name": "Monster",
            "price": "200.0",
            "quantity": "2.5",
          },
          Object {
            "id": "39",
            "name": "Jerry Smith",
            "price": "2.0",
            "quantity": "1.0",
          },
        ],
        "name": "Real Beast",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "I am an Evil Morty",
        "id": "78",
        "items": Array [
          Object {
            "id": "21",
            "name": "Jerry Smiths",
            "price": "200.0",
            "quantity": "1.0",
          },
          Object {
            "id": "24",
            "name": "Waga",
            "price": "5.0",
            "quantity": "-4.0",
          },
          Object {
            "id": "19",
            "name": "Sima",
            "price": "20.0",
            "quantity": "4.0",
          },
          Object {
            "id": "25",
            "name": "trison",
            "price": "5.0",
            "quantity": "6.0",
          },
          Object {
            "id": "20",
            "name": "Hahah",
            "price": "2.0",
            "quantity": "3.0",
          },
          Object {
            "id": "18",
            "name": "Uji",
            "price": "25.0",
            "quantity": "5.0",
          },
          Object {
            "id": "22",
            "name": "ugali",
            "price": "2.0",
            "quantity": "3.0",
          },
        ],
        "name": "Evil Morty",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "1000 years of me and mortty",
        "id": "79",
        "items": Array [
          Object {
            "id": "16",
            "name": "Jerry",
            "price": "100.0",
            "quantity": "1.0",
          },
          Object {
            "id": "17",
            "name": "Vans",
            "price": "2500.0",
            "quantity": "1.0",
          },
          Object {
            "id": "29",
            "name": "Beth",
            "price": "2.0",
            "quantity": "3.0",
          },
        ],
        "name": "Rick Sanchez",
        "shared": "False",
        "shared_by": "nobody",
      },
      Object {
        "description": "Things to buy when am hedding back to school",
        "id": "168",
        "items": Array [
          Object {
            "id": "56",
            "name": "Transmara",
            "price": "4.0",
            "quantity": "5.0",
          },
          Object {
            "id": "52",
            "name": "Book",
            "price": "10.0",
            "quantity": "2.0",
          },
          Object {
            "id": "49",
            "name": "Biros",
            "price": "20.0",
            "quantity": "5.0",
          },
        ],
        "name": "Back to school",
        "shared": "False",
        "shared_by": "nobody",
      },
    ],
    "type": "SHOPPINGLISTS_LOADED_SUCCESSFULLY",
  },
]
`;
